[BUGFIX] Decrease z-index for disabled fields in FormEngine
The z-index for disabled input fields is decreased to a much lower value
to avoid overlaying the module header bar.

Resolves: #80428
Releases: master, 7.6
Reviewed-on: https://review.typo3.org/52149
Tested-by: TYPO3com <no-reply@typo3.com>
Tested-by: Frank Nägler <frank.naegler@typo3.org>
Tested-by: Christian Kuhn <lolli@schwarzbu.ch>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -11823,7 +11823,7 @@ div.t3-form-field-container:first-child .t3-form-field-label-flex {
   position: relative;
 }
 .formengine-field-item.disabled .t3-form-field-disable {
-  z-index: 8000;
+  z-index: 100;
   background: #fafafa;
   display: block;
   position: absolute;
@@ -11833,7 +11833,7 @@ div.t3-form-field-container:first-child .t3-form-field-label-flex {
   filter: alpha(opacity=50);
 }
 .t3-form-field-eval-null-checkbox {
-  z-index: 9000;
+  z-index: 150;
 }
 .t3-form-palette-field-label {
   text-indent: 2px;
